[package]
name = "anao-chave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serenity = { version = "0.12.0", features = ["interactions_endpoint"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
